--- a/drivedb.yml
+++ b/drivedb.yml
@@ -1,3 +1,21 @@
+# This file was generated from:
+# 
+# drivedb.h - smartmontools drive database file
+# 
+# Home page of code is: http://www.smartmontools.org
+# 
+# Copyright (C) 2003-11 Philip Williams, Bruce Allen
+# Copyright (C) 2008-18 Christian Franke
+# 
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2, or (at your option)
+# any later version.
+# 
+# You should have received a copy of the GNU General Public License
+# (for example COPYING); If not, see <http://www.gnu.org/licenses/>.
+# 
+# 
 drives:
 - family: '$Id: drivedb.h 4732 2018-06-17 17:45:04Z dipohl $'
   model_regex: '-'
